[gd_scene load_steps=7 format=3 uid="uid://c5t5g05rp5ixl"]

[ext_resource type="Script" path="res://scripts/level_up_ui.gd" id="1_6l8qd"]
[ext_resource type="Texture2D" uid="uid://p0rnn52nlr72" path="res://assets/sprites/fireball.png" id="2_tlnpu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uao2r"]
bg_color = Color(0.227451, 0.227451, 0.227451, 0.941176)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 0.811765, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b61tx"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.403922, 0.403922, 0.403922, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2hn1m"]
bg_color = Color(0.176471, 0.176471, 0.176471, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.537255, 0.537255, 0.537255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q01x2"]
bg_color = Color(0.0784314, 0.0784314, 0.0784314, 0.882353)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="LevelUpUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6l8qd")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(500, 400)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_q01x2")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.847059, 0, 1)
theme_override_font_sizes/font_size = 28
text = "LEVEL UP!"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Choose an upgrade"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="UpgradeOptions" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Option1" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.917647, 0.513726, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b61tx")
theme_override_styles/hover = SubResource("StyleBoxFlat_uao2r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2hn1m")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option1/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option1/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_tlnpu")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Increase Projectile Count"
vertical_alignment = 1

[node name="Option2" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.917647, 0.513726, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b61tx")
theme_override_styles/hover = SubResource("StyleBoxFlat_uao2r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2hn1m")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option2/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option2/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_tlnpu")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Increase Firing Speed"
vertical_alignment = 1

[node name="Option3" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 0.831373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.917647, 0.513726, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_b61tx")
theme_override_styles/hover = SubResource("StyleBoxFlat_uao2r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_2hn1m")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option3/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="TextureRect" type="TextureRect" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option3/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_tlnpu")
expand_mode = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Add Orbiting Fireballs"
vertical_alignment = 1

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/UpgradeOptions/Option3" to="." method="_on_option_3_pressed"]
